--- a/views/benefits/ccb_payment-en.njk
+++ b/views/benefits/ccb_payment-en.njk
@@ -1,23 +1,23 @@
 <div class="benefit">
 
-   <h2 class="benefit__header" id="ccb_payment">
+  <h2 class="benefit__header" id="ccb_payment">
     {{__("ccb_payment.header")}}
   </h2>
 
-  <ul class="list-none list-outside pl-0">
+  <ul class="benefit__featured_list">
     {{ benefitLi("Automatic payment in May") }}
     {{ benefitLi("$300 per child") }}
   </ul>
 
-  <div class="pb-5 mt-6">
+  <div class="benefit__body">
 
     <strong>The benefit can help if you:</strong>
-    <ul class='list-disc list-outside'>
+    <ul>
       <li>Care for a child under 18 years old.</li>
     </ul>
 
     <strong>Good to know:</strong>
-    <ul class='list-disc list-outside'>
+    <ul>
       <li>Check your bank account to find out if you’ve been receiving the Canada Child Benefit. </li>
       <li>
         <a href='https://www.canada.ca/en/revenue-agency/services/child-family-benefits/benefit-payment-dates.html'
