--- a/views/benefits/cesb-en.njk
+++ b/views/benefits/cesb-en.njk
@@ -9,7 +9,7 @@
 
   <div id="benefitInfoCESB" aria-labelledby="benefitInfoButtonCESB" tabindex="-1">
   {% endif %}
-    <ul class="list-none list-outside pl-0">
+    <ul class="benefit__featured_list">
       {{ benefitLi("From May to August 2020") }}
       <li>
         <div class="p-5 m-1">
@@ -31,7 +31,7 @@
       </li>
     </ul>
 
-    <div class="pb-5 mt-6">
+    <div class="benefit__body">
 
       <strong>The benefit can help if you are in one of the following situations:</strong>
       <ul class='list-outside list-disc'>
