--- a/views/benefits/cesb-fr.njk
+++ b/views/benefits/cesb-fr.njk
@@ -4,7 +4,7 @@
     {{__("cesb.header")}}
   </h2>
 
-  <ul class="list-none list-outside pl-0">
+  <ul class="benefit__featured_list">
     {{ benefitLi("De mai à août 2020") }}
     <li>
       <div class="p-5 m-1">
@@ -26,7 +26,7 @@
     </li>
   </ul>
 
-  <div class="pb-5 mt-6">
+  <div class="benefit__body">
 
     <strong>Cette prestation peut vous aider si l’un des scénario suivants s’appliquent à vous :</strong>
     <ul class='list-outside list-disc'>
