--- a/views/benefits/cssg-fr.njk
+++ b/views/benefits/cssg-fr.njk
@@ -4,11 +4,11 @@
     {{__("cssg.header")}}
   </h2>
 
-  <ul class="list-none list-outside pl-0">
+  <ul class="benefit__featured_list">
     {{ benefitLi("Jusqu’à concurrence de 5000 $ à l’automne") }}
   </ul>
 
-  <div class="pb-5 mt-6">
+  <div class="benefit__body">
     <strong>Bon à savoir :</strong>
     <ul class='list-outside list-disc'>
       <li>Le gouvernement doit apporter des modifications à certaines lois afin de rendre cette prestation possible. Cela prendra un peu de temps et pourrait inflencer certains détails de cette prestation.</li>
