--- a/views/benefits/ei_regular_cerb-fr.njk
+++ b/views/benefits/ei_regular_cerb-fr.njk
@@ -4,13 +4,13 @@
     {{__("ei_regular_cerb.header")}}
   </h2>
 
-  <ul class="list-none list-outside pl-0">
+  <ul class="benefit__featured_list">
     {{ benefitLi("500 $ par semaine") }}
     {{ benefitLi("Jusqu’à 16 semaines", "tant que vous répondez aux critères d’admissibilité") }}
     {{ benefitLi("À recevoir au plus tard 10 jours après la demande") }}
   </ul>
 
-  <div class="pb-5 mt-6">
+  <div class="benefit__body">
     <strong>Prochaines étapes :</strong>
     <ul class='list-outside list-disc'>
       <li>Vous devrez répondre à quelques questions afin de déterminer si vous devez présenter la demande auprès de l’agence du revenu du Canada (ARC) ou Services Canada.</li>
