--- a/views/benefits/ei_sickness_cerb-en.njk
+++ b/views/benefits/ei_sickness_cerb-en.njk
@@ -4,13 +4,13 @@
     {{__("ei_sickness_cerb.header")}}
   </h2>
 
-  <ul class="list-none list-outside pl-0">
+  <ul class="benefit__featured_list">
     {{ benefitLi("$500 per week") }}
     {{ benefitLi("Up to 16 weeks", "if you keep  meeting the eligibility criteria") }}
     {{ benefitLi("First payment within 10 days of applying") }}
   </ul>
 
-  <div class="pb-5 mt-6">
+  <div class="benefit__body">
     <strong>Next steps:</strong>
     <ul class='li-disc list-outside'>
       <li>You’ll be asked some questions to direct you to apply through either the Canada Revenue Agency (CRA) or Service Canada.</li>
