--- a/views/benefits/ei_workshare-en.njk
+++ b/views/benefits/ei_workshare-en.njk
@@ -4,20 +4,20 @@
     {{__("ei_workshare.header")}}
   </h2>
 
-  <ul class="list-none list-outside pl-0">
+  <ul class="benefit__featured_list">
     {{ benefitLi("Receive EI benefits") }}
     {{ benefitLi("Up to 76 weeks") }}
   </ul>
 
-  <div class="pb-5 mt-6">
+  <div class="benefit__body">
 
     <strong>The benefit can help if:</strong>
-    <ul class='list-disc list-outside'>
+    <ul>
       <li>Your hours have been reduced by 10 to 60% because of COVID-19.</li>
     </ul>
 
     <strong>To do this:</strong>
-    <ul class='list-disc list-outside'>
+    <ul>
       <li>You would enter into an agreement with your employer and other coworkers who do the exact same work as you.</li>
       <li>All employees who do the same work need to agree to share the work equally, and your employer has to agree as well. </li>
     </ul>
