--- a/views/benefits/gst_credit-fr.njk
+++ b/views/benefits/gst_credit-fr.njk
@@ -4,16 +4,16 @@
     {{ __("gst_credit.header") }}
   </h3>
 
-  <ul class="list-none list-outside pl-0">
+  <ul class="benefit__featured_list">
     {{ benefitLi("Versement automatique au mois d’avril si vous recevez déjà le crédit pour la TPS") }}
     {{ benefitLi("En moyenne :<br> 400 $ pour les célibataires<br>600 $ pour les couples") }}
     {{ benefitLi("Le montant du crédit dépend de votre revenu pour l’année imposable 2018") }}
   </ul>
 
-  <div class="pb-5 mt-6">
+  <div class="benefit__body">
 
     <strong>Bon à savoir :</strong>
-    <ul class='list-disc list-outside'>
+    <ul>
       <li>Vous n’avez pas à faire la demande pour recevoir ce montant. À compter du 9 avril, il sera envoyé automatiquement si vous recevez déjà le crédit pour la TPS.</li>
       <li>Vérifiez votre compte bancaire ou votre courrier pour voir si vous avez  recu le crédit pour la TPS.</li>
     </ul>
