--- a/views/benefits/mortgage_deferral-en.njk
+++ b/views/benefits/mortgage_deferral-en.njk
@@ -4,14 +4,14 @@
     {{__("mortgage_deferral.header")}}
   </h2>
 
-  <ul class="list-none list-outside pl-0">
+  <ul class="benefit__featured_list">
     {{ benefitLi("Skip mortgage payments until you’re able to pay again") }}
   </ul>
 
-  <div class="pb-5 mt-6">
+  <div class="benefit__body">
 
     <strong>Good to know:</strong>
-    <ul class='list-disc list-outside'>
+    <ul>
       <li>The bank will still charge interest.</li>
       <li> When you’re able to pay again, you’ll have to pay the interest that was collected during the deferral, as well as your regular payments.</li>
       <li> You can also talk to your bank about special payment arrangements or re-amortizing your mortgage.</li>
