--- a/views/benefits/mortgage_deferral-fr.njk
+++ b/views/benefits/mortgage_deferral-fr.njk
@@ -4,14 +4,14 @@
     {{__("mortgage_deferral.header")}}
   </h2>
 
-  <ul class="list-none list-outside pl-0">
+  <ul class="benefit__featured_list">
     {{ benefitLi("Interrompez vos paiements hypothécaires jusqu’à ce que vous puissiez les payer à nouveau") }}
   </ul>
 
-  <div class="pb-5 mt-6">
+  <div class="benefit__body">
 
     <strong>Bon à savoir :</strong>
-    <ul class='list-disc list-outside'>
+    <ul>
       <li>La banque chargera quand même de l’intérêt.</li>
       <li> Lorsque vous pourrez effectuer vos paiements à nouveau, vous devrez payer l’intérêt encouru depuis le sursis en plus de vos paiements réguliers.</li>
       <li> Vous pouvez aussi parler à votre banque à propos de plans de paiements spéciaux afin de ré-amortir votre hypothèque.</li>
