--- a/views/benefits/oas-en.njk
+++ b/views/benefits/oas-en.njk
@@ -4,15 +4,15 @@
     {{__("oas.header")}}
   </h2>
 
-  <ul class="list-none list-outside pl-0">
+  <ul class="benefit__featured_list">
     {{ benefitLi("$300 one-time, tax-free payment if you are enrolled in the Old Age Security (OAS) pension <br><br> OR $500 one-time, tax-free payment if you receive the Guaranteed Income Supplement (GIS)") }}
     {{ benefitLi("July 2020") }}
   </ul>
 
-  <div class="pb-5 mt-6">
+  <div class="benefit__body">
 
     <strong>Good to know:</strong>
-    <ul class='list-disc list-outside'>
+    <ul>
       <li>Payments will be sent automatically. You don’t need to do anything to receive it.</li>
     </ul>
 
