--- a/views/benefits/oas-fr.njk
+++ b/views/benefits/oas-fr.njk
@@ -4,15 +4,15 @@
     {{__("oas.header")}}
   </h2>
 
-  <ul class="list-none list-outside pl-0">
+  <ul class="benefit__featured_list">
     {{ benefitLi("Paiement unique de 300 $, non imposable, si vous recevez la pension de la Sécurité de vieillesse (SV) <br><br> OU paiement unique de 500 $, non imposable, si vous recevez le supplément de revenu garanti (SRG)") }}
     {{ benefitLi("Juillet 2020") }}
   </ul>
 
-  <div class="pb-5 mt-6">
+  <div class="benefit__body">
 
     <strong>Bon à savoir :</strong>
-    <ul class='list-disc list-outside'>
+    <ul>
       <li>Les paiements seront déposés automatiquement. Vous n’avez pas à faire quoi que ce soit pour le recevoir. </li>
     </ul>
 
