--- a/views/benefits/province-bc-en.njk
+++ b/views/benefits/province-bc-en.njk
@@ -4,7 +4,7 @@
     {{__("province-bc.header")}}
   </h2>
 
-  <div class="pb-5 mt-6">
+  <div class="benefit__body">
 
     <p>Some provincial governments are offering additional support for people during COVID-19.</p>
 
