--- a/views/benefits/rent_help-en.njk
+++ b/views/benefits/rent_help-en.njk
@@ -4,9 +4,9 @@
     {{__("rent_help.header")}}
   </h2>
 
-  <div class="pb-5 mt-6">
+  <div class="benefit__body">
 
-    <ul class='list-disc list-outside'>
+    <ul>
       <li>Provincial governments are in charge of rental housing rules.</li>
       <li> In most provinces and territories, you cannot be evicted for not paying rent.</li>
     </ul>
