--- a/views/benefits/rrif-en.njk
+++ b/views/benefits/rrif-en.njk
@@ -4,9 +4,9 @@
     {{__("rrif.header")}}
   </h2>
 
-  <div class="pb-5 mt-6">
+  <div class="benefit__body">
 
-    <ul class='list-disc list-outside'>
+    <ul>
       <li>The mandatory amount you need to withdraw from your RRIF in 2020 will be 25% lower so you can save more money.</li>
     </ul>
 
