--- a/views/benefits/rrif-fr.njk
+++ b/views/benefits/rrif-fr.njk
@@ -4,8 +4,8 @@
     {{__("rrif.header")}}
   </h2>
 
-  <div class="pb-5 mt-6">
-    <ul class='list-disc list-outside'>
+  <div class="benefit__body">
+    <ul>
       <li>
         Le montant obligatoire que vous devrez retirer de votre fond enregistré de revenu de retraire
         en 2020 sera 25% plus bas afin que vous puissiez économiser.
