--- a/views/benefits/student_financial_aid-fr.njk
+++ b/views/benefits/student_financial_aid-fr.njk
@@ -6,7 +6,7 @@
 
   <strong>Hausse des bourses et prêts canadiens d’études</strong>
 
-  <ul class="list-none list-outside pl-0">
+  <ul class="benefit__featured_list">
     {{ benefitLi("Jusqu’à 6000 $ en bourses pour les étudiants à temps plein") }}
     {{ benefitLi("Jusqu’à 3600 $ en bourses pour les étudiants à temps partiel") }}
     {{ benefitLi("Doublement des montants des bourses canadiennes pour étudiants qui ont des personnes à charge") }}
@@ -15,7 +15,7 @@
     {{ benefitLi("Jusqu’à 350 $ par semaine pour les prêts étudiants") }}
   </ul>
 
-  <div class="pb-5 mt-6">
+  <div class="benefit__body">
     <strong>Bon à savoir :</strong>
     <ul class='list-outside list-disc'>
       <li>Ce programme d’aide sera disponible dès le 1er août 2020.</li>
