--- a/views/benefits/student_loan-en.njk
+++ b/views/benefits/student_loan-en.njk
@@ -4,15 +4,15 @@
     {{__("student_loan.header")}}
   </h2>
 
-  <ul class="list-none list-outside pl-0">
+  <ul class="benefit__featured_list">
     {{ benefitLi("Payments automatically paused") }}
     {{ benefitLi("From March 30, 2020 until September 30, 2020") }}
   </ul>
 
-  <div class="pb-5 mt-6">
+  <div class="benefit__body">
 
     <strong>Good to know:</strong>
-    <ul class='list-disc list-outside'>
+    <ul>
       <li>You don’t need to apply to pause your payments.</li>
       <li> Pre-authorized payments are stopped.</li>
       <li> Log in to your <a href='https://www.csnpe-nslsc.canada.ca/en/home' target='_blank'>National Student Loans Service Centre</a> account to see how much you will save.</li>
