--- a/views/benefits/ccb_payment-fr.njk
+++ b/views/benefits/ccb_payment-fr.njk
@@ -4,20 +4,20 @@
     {{__("ccb_payment.header")}}
   </h2>
 
-  <ul class="list-none list-outside pl-0">
+  <ul class="benefit__featured_list">
     {{ benefitLi("Versement automatique au mois de mai ") }}
     {{ benefitLi("300 $ par enfant ") }}
   </ul>
 
-  <div class="pb-5 mt-6">
+  <div class="benefit__body">
 
     <strong>Cette prestation peut vous aider si :</strong>
-    <ul class='list-disc list-outside'>
+    <ul>
       <li>vous avez la charge d’un enfant de moins de 18 ans. </li>
     </ul>
 
     <strong>Bon à savoir :</strong>
-    <ul class='list-disc list-outside'>
+    <ul>
       <li>Consultez vos relevés bancaires afin de déterminer si vous recevez déjà l’Allocation canadienne pour enfant.</li>
       <li>
         <a href='https://www.canada.ca/fr/agence-revenu/services/prestations-enfants-familles/dates-versement-prestations.html' target='_blank'>Consultez les dates de versement des prestations</a>.</li>
