--- a/views/benefits/cssg-en.njk
+++ b/views/benefits/cssg-en.njk
@@ -4,11 +4,11 @@
     {{__("cssg.header")}}
   </h2>
 
-  <ul class="list-none list-outside pl-0">
+  <ul class="benefit__featured_list">
     {{ benefitLi("Up to $5,000 towards school in the fall") }}
   </ul>
 
-  <div class="pb-5 mt-6">
+  <div class="benefit__body">
     <strong>Good to know:</strong>
     <ul class='list-outside list-disc'>
       <li>The government has proposed changes to laws to deliver this new Canada Student Service Grant. That means it has to go to Parliament, which will take time and could change the proposed details.</li>
