--- a/views/benefits/ei_regular_cerb-en.njk
+++ b/views/benefits/ei_regular_cerb-en.njk
@@ -4,15 +4,15 @@
     {{__("ei_regular_cerb.header")}}
   </h2>
 
-  <ul class="list-none list-outside pl-0">
+  <ul class="benefit__featured_list">
     {{ benefitLi("$500 per week") }}
     {{ benefitLi("Up to 16 weeks", "if you keep  meeting the eligibility criteria") }}
     {{ benefitLi("First payment within 10 days of applying") }}
   </ul>
 
-  <div class="pb-5 mt-6">
+  <div class="benefit__body">
     <strong>Next steps:</strong>
-    <ul class='list-disc list-outside'>
+    <ul>
       <li>You’ll be asked some questions to direct you to apply through either the Canada Revenue Agency (CRA) or Service Canada.</li>
       <li>The application will ask you to declare that you meet the eligibility criteria, so read the details carefully. </li>
       <li>You’ll need to pay income tax on these payments in the future.</li>
