--- a/views/benefits/gst_credit-en.njk
+++ b/views/benefits/gst_credit-en.njk
@@ -3,7 +3,7 @@
     {{ __("gst_credit.header") }}
   </h3>
 
-  <ul class="list-none list-outside pl-0">
+  <ul class="benefit__featured_list">
     {{ benefitLi("Automatic payment in April if you already receive the GST credit") }}
 
     <li>
@@ -25,10 +25,10 @@
     {{ benefitLi("Amount depends on your 2018 income taxes") }}
   </ul>
 
-  <div class="pb-5 mt-6">
+  <div class="benefit__body">
 
     <strong>Good to know:</strong>
-    <ul class='list-disc list-outside'>
+    <ul>
       <li>You don’t need to do anything to receive this payment. It was sent automatically if you already receive the GST credit, starting April 9.</li>
       <li>Check your bank account or mailbox to see if you’ve received it.</li>
     </ul>
