--- a/views/benefits/province-mb-fr.njk
+++ b/views/benefits/province-mb-fr.njk
@@ -4,7 +4,7 @@
     {{__("province-mb.header")}}
   </h2>
 
-  <div class="pb-5 mt-6">
+  <div class="benefit__body">
 
     <p>Certains gouvernements provinciaux offrent des programmes d’aide financière additionnels pendant la COVID-19.</p>
 
