--- a/views/benefits/rent_help-fr.njk
+++ b/views/benefits/rent_help-fr.njk
@@ -4,9 +4,9 @@
     {{__("rent_help.header")}}
   </h2>
 
-  <div class="pb-5 mt-6">
+  <div class="benefit__body">
 
-    <ul class='list-disc list-outside'>
+    <ul>
       <li>Les gouvernements provinciaux sont responsables de la réglementation des logements locatifs.</li>
       <li> Dans la majorité des provinces et territoires, vous ne pouvez pas être expulsé pour ne pas avoir payé votre loyer.</li>
     </ul>
