--- a/views/benefits/student_financial_aid-en.njk
+++ b/views/benefits/student_financial_aid-en.njk
@@ -6,7 +6,7 @@
 
   <strong>Increasing Canada Student Grants and Loans</strong>
 
-  <ul class="list-none list-outside pl-0">
+  <ul class="benefit__featured_list">
     {{ benefitLi("Up to $6,000 in grants for full-time students") }}
     {{ benefitLi("Up to $3,600 in grants for part-time students") }}
     {{ benefitLi("Doubling grants for students with dependants") }}
@@ -15,7 +15,7 @@
     {{ benefitLi("Up to $350 for the weekly amount in student loans") }}
   </ul>
 
-  <div class="pb-5 mt-6">
+  <div class="benefit__body">
     <strong>Good to know:</strong>
     <ul class='list-outside list-disc'>
       <li>This financial aid starts August 1, 2020.</li>
