--- a/views/benefits/student_loan-fr.njk
+++ b/views/benefits/student_loan-fr.njk
@@ -4,15 +4,15 @@
     {{__("student_loan.header")}}
   </h2>
 
-  <ul class="list-none list-outside pl-0">
+  <ul class="benefit__featured_list">
     {{ benefitLi("Les paiements sont automatiquement suspendus") }}
     {{ benefitLi("Du 30 mars 2020 jusqu’au 30 septembre 2020") }}
   </ul>
 
-  <div class="pb-5 mt-6">
+  <div class="benefit__body">
 
     <strong>Bon à savoir :</strong>
-    <ul class='list-disc list-outside'>
+    <ul>
       <li>Vous n’avez pas à faire de demande afin de suspendre vos paiements.</li>
       <li> Les paiements pré-autorisés sont suspendus.</li>
       <li> Consultez vous à votre compte au <a href='https://www.csnpe-nslsc.canada.ca/fr/Accueil' target='_blank'>Centre de service national de prêts aux étudiants</a> pour plus de détails.</li>
