--- a/views/benefits/cesb-en.njk
+++ b/views/benefits/cesb-en.njk
@@ -12,10 +12,10 @@
     <ul class="benefit__featured_list">
       {{ benefitLi("From May to August 2020") }}
       <li>
-        <div class="p-5 m-1">
-          <p class="relative m-0 pl-8 ">
-            <img src="{{ asset('/img/check-circle.svg') }}" class="w-6 h-6 mt-1 -ml-8 absolute fill-current" alt="">
-            <ul class='list-none  mt-2'>
+        <div>
+          <p>
+            <img src="{{ asset('/img/check-circle.svg') }}" alt="">
+            <ul>
               <li>
                 <strong>$1,250 per month</strong>
               </li>
