--- a/views/macros/benefit-result.njk
+++ b/views/macros/benefit-result.njk
@@ -1,8 +1,8 @@
 {% macro benefitLi(strongText, text) %}
   <li>
-    <div class="py-2">
-      <p class="relative m-0 pl-10">
-        <img src="{{ asset('/img/check-circle.svg') }}" class="w-6 h-6 mt-1 -ml-10 absolute fill-current" alt="">
+    <div>
+      <p>
+        <img src="{{ asset('/img/check-circle.svg') }}" alt="">
         <strong>{{ strongText | safe }}</strong> {% if text %}{{ text }}{% endif %}
       </p>
     </div>
