fix typo and use new featured list class

--- a/views/benefits/oas-en.njk
+++ b/views/benefits/oas-en.njk
@@ -4,13 +4,13 @@
     {{__("oas.header")}}
   </h2>
 
-  <ul class="list-none list-outside pl-0">
+  <ul class="benefit__featured_list">
     {{ benefitLi("$300 one-time, tax-free payment if you are eligible for the Old Age Security (OAS) pension
         <br><br> 
         OR $500 one-time, tax-free payment if you receive the Guaranteed Income Supplement (GIS) 
         <br><br> 
         OR $500 one-time, tax-free payment if you receive the Allowance or the Allowance for the Survivor") }}
-    {{ BenefitLi("Payments will be sent as soon as possible") }}
+    {{ benefitLi("Payments will be sent as soon as possible") }}
   </ul>
 
   <div class="benefit__body">
