--- a/views/benefits/oas-fr.njk
+++ b/views/benefits/oas-fr.njk
@@ -4,7 +4,7 @@
     {{__("oas.header")}}
   </h2>
 
-  <ul class="list-none list-outside pl-0">
+  <ul class="benefit__featured_list">
     {{ benefitLi("Paiement unique de 300 $, non imposable, si vous êtes admissible à la pension de la Sécurité de vieillesse (SV) 
       <br><br>
       OU paiement unique de 500 $, non imposable, si vous recevez le supplément de revenu garanti (SRG)
