add padding to bottom of benefits

--- a/assets/scss/components/_benefits.scss
+++ b/assets/scss/components/_benefits.scss
@@ -1,5 +1,5 @@
 .benefits {
-  @apply  -mx-5 bg-green-100;
+  @apply  -mx-5 bg-green-100 pb-10;
   &__header {
     @apply mb-6 p-4 flex items-center;
 
