--- a/views/benefits/mortgage_deferral-en.njk
+++ b/views/benefits/mortgage_deferral-en.njk
@@ -4,24 +4,26 @@
     {{__("mortgage_deferral.header")}}
   </h2>
 
-  <ul class="benefit__featured_list">
-    {{ benefitLi("Skip mortgage payments until you’re able to pay again") }}
-  </ul>
-
-  <div class="benefit__body">
-
-    <strong>Good to know:</strong>
-    <ul>
-      <li>The bank will still charge interest.</li>
-      <li> When you’re able to pay again, you’ll have to pay the interest that was collected during the deferral, as well as your regular payments.</li>
-      <li> You can also talk to your bank about special payment arrangements or re-amortizing your mortgage.</li>
+  <div class="benefit__main">
+    <ul class="benefit__featured_list">
+      {{ benefitLi("Skip mortgage payments until you’re able to pay again") }}
     </ul>
 
-  </div>
+    <div class="benefit__body">
 
-  {{ infoLink(
-        "mortgage_deferral",
-        "https://cba.ca/mortgage-deferral-to-help-canadians-experiencing-financial-hardship-due-to-covid-19",
-        "Learn more about help with your mortgage"
-    )}}
+      <strong>Good to know:</strong>
+      <ul>
+        <li>The bank will still charge interest.</li>
+        <li> When you’re able to pay again, you’ll have to pay the interest that was collected during the deferral, as well as your regular payments.</li>
+        <li> You can also talk to your bank about special payment arrangements or re-amortizing your mortgage.</li>
+      </ul>
+
+    </div>
+
+    {{ infoLink(
+          "mortgage_deferral",
+          "https://cba.ca/mortgage-deferral-to-help-canadians-experiencing-financial-hardship-due-to-covid-19",
+          "Learn more about help with your mortgage"
+      )}}
+  </div>
 </div>
