--- a/views/benefits/student_financial_aid-fr.njk
+++ b/views/benefits/student_financial_aid-fr.njk
@@ -4,30 +4,32 @@
     {{__("student_financial_aid.header")}}
   </h2>
 
-  <strong>Hausse des bourses et prêts canadiens d’études</strong>
+  <div class="benefit__main">
+    <strong>Hausse des bourses et prêts canadiens d’études</strong>
 
-  <ul class="benefit__featured_list">
-    {{ benefitLi("Jusqu’à 6000 $ en bourses pour les étudiants à temps plein") }}
-    {{ benefitLi("Jusqu’à 3600 $ en bourses pour les étudiants à temps partiel") }}
-    {{ benefitLi("Doublement des montants des bourses canadiennes pour étudiants qui ont des personnes à charge") }}
-    {{ benefitLi("Doublement des montants des bourses canadiennes pour étudiants qui ont une incapacité permanente") }}
-    {{ benefitLi("Exemption de la contribution de l’étudiant et de l’époux") }}
-    {{ benefitLi("Jusqu’à 350 $ par semaine pour les prêts étudiants") }}
-  </ul>
-
-  <div class="benefit__body">
-    <strong>Bon à savoir :</strong>
-    <ul>
-      <li>Ce programme d’aide sera disponible dès le 1er août 2020.</li>
-      <li>Ce programme est disponible pendant 1 an.</li>
-      <li>Vous pouvez appliquer dans <a href="https://www.canada.ca/fr/services/prestations/education/aide-etudiants/bourses-prets/province-demande.html" target="_blank">votre province ou territoire de résidence</a>.</li>
+    <ul class="benefit__featured_list">
+      {{ benefitLi("Jusqu’à 6000 $ en bourses pour les étudiants à temps plein") }}
+      {{ benefitLi("Jusqu’à 3600 $ en bourses pour les étudiants à temps partiel") }}
+      {{ benefitLi("Doublement des montants des bourses canadiennes pour étudiants qui ont des personnes à charge") }}
+      {{ benefitLi("Doublement des montants des bourses canadiennes pour étudiants qui ont une incapacité permanente") }}
+      {{ benefitLi("Exemption de la contribution de l’étudiant et de l’époux") }}
+      {{ benefitLi("Jusqu’à 350 $ par semaine pour les prêts étudiants") }}
     </ul>
 
-  </div>
+    <div class="benefit__body">
+      <strong>Bon à savoir :</strong>
+      <ul>
+        <li>Ce programme d’aide sera disponible dès le 1er août 2020.</li>
+        <li>Ce programme est disponible pendant 1 an.</li>
+        <li>Vous pouvez appliquer dans <a href="https://www.canada.ca/fr/services/prestations/education/aide-etudiants/bourses-prets/province-demande.html" target="_blank">votre province ou territoire de résidence</a>.</li>
+      </ul>
 
-  {{ infoLink(
-        "student_financial_aid",
-        "https://www.canada.ca/fr/services/prestations/education/aide-etudiants/avis-covid-19.html",
-        "En savoir plus à propos de l’aide financière pour étudiants"
-    )}}
+    </div>
+
+    {{ infoLink(
+          "student_financial_aid",
+          "https://www.canada.ca/fr/services/prestations/education/aide-etudiants/avis-covid-19.html",
+          "En savoir plus à propos de l’aide financière pour étudiants"
+      )}}
+  </div>
 </div>
