--- a/views/benefits/ccb_payment-fr.njk
+++ b/views/benefits/ccb_payment-fr.njk
@@ -4,30 +4,32 @@
     {{__("ccb_payment.header")}}
   </h2>
 
-  <ul class="benefit__featured_list">
-    {{ benefitLi("Versement automatique au mois de mai ") }}
-    {{ benefitLi("300 $ par enfant ") }}
-  </ul>
-
-  <div class="benefit__body">
-
-    <strong>Cette prestation peut vous aider si :</strong>
-    <ul>
-      <li>vous avez la charge d’un enfant de moins de 18 ans. </li>
+  <div class="benefit__main">
+    <ul class="benefit__featured_list">
+      {{ benefitLi("Versement automatique au mois de mai ") }}
+      {{ benefitLi("300 $ par enfant ") }}
     </ul>
 
-    <strong>Bon à savoir :</strong>
-    <ul>
-      <li>Consultez vos relevés bancaires afin de déterminer si vous recevez déjà l’Allocation canadienne pour enfant.</li>
-      <li>
-        <a href='https://www.canada.ca/fr/agence-revenu/services/prestations-enfants-familles/dates-versement-prestations.html' target='_blank'>Consultez les dates de versement des prestations</a>.</li>
-    </ul>
+    <div class="benefit__body">
 
+      <strong>Cette prestation peut vous aider si :</strong>
+      <ul>
+        <li>vous avez la charge d’un enfant de moins de 18 ans. </li>
+      </ul>
+
+      <strong>Bon à savoir :</strong>
+      <ul>
+        <li>Consultez vos relevés bancaires afin de déterminer si vous recevez déjà l’Allocation canadienne pour enfant.</li>
+        <li>
+          <a href='https://www.canada.ca/fr/agence-revenu/services/prestations-enfants-familles/dates-versement-prestations.html' target='_blank'>Consultez les dates de versement des prestations</a>.</li>
+      </ul>
+
+    </div>
+
+    {{ infoLink(
+          "ccb_payment",
+          "https://www.canada.ca/fr/agence-revenu/services/prestations-enfants-familles/allocation-canadienne-enfants-apercu.html",
+          "En savoir plus à propos de l’Allocation canadienne pour enfant"
+      )}}
   </div>
-
-  {{ infoLink(
-        "ccb_payment",
-        "https://www.canada.ca/fr/agence-revenu/services/prestations-enfants-familles/allocation-canadienne-enfants-apercu.html",
-        "En savoir plus à propos de l’Allocation canadienne pour enfant"
-    )}}
 </div>
