--- a/views/benefits/cerb-fr.njk
+++ b/views/benefits/cerb-fr.njk
@@ -4,26 +4,28 @@
     {{__("cerb.header")}}
   </h2>
 
-  <ul class="benefit__featured_list">
-    {{ benefitLi("500 $ par semaine") }}
-    {{ benefitLi("Jusqu’à 16 semaines", "tant que vous répondez aux critères d’admissibilité") }}
-    {{ benefitLi("À recevoir au plus tard 10 jours après la demande") }}
-  </ul>
-
-  <div class="benefit__body">
-
-    <strong>Prochaines étapes :</strong>
-    <ul>
-      <li>Vous devrez répondre à quelques questions afin de déterminer si vous devez présenter la demande auprès de l’agence du revenu du Canada (ARC) ou Services Canada.</li>
-      <li>L’application vous demandera de confirmer que vous répondez aux critères d’admissibilité. Lisez attentivement les détails.</li>
-      <li>Ces montants sont imposables.</li>
+  <div class="benefit__main">
+    <ul class="benefit__featured_list">
+      {{ benefitLi("500 $ par semaine") }}
+      {{ benefitLi("Jusqu’à 16 semaines", "tant que vous répondez aux critères d’admissibilité") }}
+      {{ benefitLi("À recevoir au plus tard 10 jours après la demande") }}
     </ul>
 
-  </div>
+    <div class="benefit__body">
 
-  {{ infoLink(
-        "cerb",
-        "https://www.canada.ca/fr/services/prestations/ae/pcusc-application.html",
-        "Découvrez comment appliquer"
-    )}}
+      <strong>Prochaines étapes :</strong>
+      <ul>
+        <li>Vous devrez répondre à quelques questions afin de déterminer si vous devez présenter la demande auprès de l’agence du revenu du Canada (ARC) ou Services Canada.</li>
+        <li>L’application vous demandera de confirmer que vous répondez aux critères d’admissibilité. Lisez attentivement les détails.</li>
+        <li>Ces montants sont imposables.</li>
+      </ul>
+
+    </div>
+
+    {{ infoLink(
+          "cerb",
+          "https://www.canada.ca/fr/services/prestations/ae/pcusc-application.html",
+          "Découvrez comment appliquer"
+      )}}
+  </div>
 </div>
