--- a/views/benefits/cesb-fr.njk
+++ b/views/benefits/cesb-fr.njk
@@ -4,53 +4,55 @@
     {{__("cesb.header")}}
   </h2>
 
-  <ul class="benefit__featured_list">
-    {{ benefitLi("De mai à août 2020") }}
-    <li>
-      <div>
-        <p>
-          <img src="{{ asset('/img/check-circle.svg') }}" alt="">
-          <ul>
-            <li>
-              <strong>1250 $ par mois </strong>
-            </li>
-            <li>
-              <strong>OU 2000 $ par mois si vous avez une incapacité permanente</strong>
-            </li>
-            <li>
-              <strong>OU 2000 $ par mois si vous avez des personnes à charge</strong>
-            </li>
-          </ul>
-        </p>
-      </div>
-    </li>
-  </ul>
-
-  <div class="benefit__body">
-
-    <strong>Cette prestation peut vous aider si l’un des scénario suivants s’appliquent à vous :</strong>
-    <ul>
-      <li>Vous êtes étudiant au niveau postsecondaire ou récemment diplômé d’un programme postsecondaire.</li>
-      <li>Vous recevrez votre diplôme d’études secondaires en 2020 et avez appliqué pour un programme d’études postsecondaires débutant avant le 1er février 2021.</li>
+  <div class="benefit__main">
+    <ul class="benefit__featured_list">
+      {{ benefitLi("De mai à août 2020") }}
+      <li>
+        <div>
+          <p>
+            <img src="{{ asset('/img/check-circle.svg') }}" alt="">
+            <ul>
+              <li>
+                <strong>1250 $ par mois </strong>
+              </li>
+              <li>
+                <strong>OU 2000 $ par mois si vous avez une incapacité permanente</strong>
+              </li>
+              <li>
+                <strong>OU 2000 $ par mois si vous avez des personnes à charge</strong>
+              </li>
+            </ul>
+          </p>
+        </div>
+      </li>
     </ul>
 
-    <strong>De plus :</strong>
-    <ul>
-      <li>vous ne recevez pas la Prestation canadienne d’urgence. (PCU)</li>
-      <li>vous ne pouvez pas travailler ou ne gagnez pas plus de 1000 $ par mois, avant impôts.</li>
-    </ul>
+    <div class="benefit__body">
 
-    <strong>Bon à savoir :</strong>
-    <ul>
-      <li>Ce programme d’aide sera disponible pour 4 mois entre mai et août 2020.</li>
-      <li>Vous pouvez appliquer via Mon dossier de l’ARC dès le 15 mai 2020.</li>
-    </ul>
+      <strong>Cette prestation peut vous aider si l’un des scénario suivants s’appliquent à vous :</strong>
+      <ul>
+        <li>Vous êtes étudiant au niveau postsecondaire ou récemment diplômé d’un programme postsecondaire.</li>
+        <li>Vous recevrez votre diplôme d’études secondaires en 2020 et avez appliqué pour un programme d’études postsecondaires débutant avant le 1er février 2021.</li>
+      </ul>
 
+      <strong>De plus :</strong>
+      <ul>
+        <li>vous ne recevez pas la Prestation canadienne d’urgence. (PCU)</li>
+        <li>vous ne pouvez pas travailler ou ne gagnez pas plus de 1000 $ par mois, avant impôts.</li>
+      </ul>
+
+      <strong>Bon à savoir :</strong>
+      <ul>
+        <li>Ce programme d’aide sera disponible pour 4 mois entre mai et août 2020.</li>
+        <li>Vous pouvez appliquer via Mon dossier de l’ARC dès le 15 mai 2020.</li>
+      </ul>
+
+    </div>
+
+    {{ infoLink(
+          "cesb",
+          "https://www.canada.ca/fr/agence-revenu/services/prestations/prestation-urgence-etudiants/pcue-qui-demande.html",
+          "Vérifier votre admissibilité à la PCUE"
+      )}}
   </div>
-
-  {{ infoLink(
-        "cesb",
-        "https://www.canada.ca/fr/agence-revenu/services/prestations/prestation-urgence-etudiants/pcue-qui-demande.html",
-        "Vérifier votre admissibilité à la PCUE"
-    )}}
 </div>
