--- a/views/benefits/ei_regular_cerb-en.njk
+++ b/views/benefits/ei_regular_cerb-en.njk
@@ -4,24 +4,26 @@
     {{__("ei_regular_cerb.header")}}
   </h2>
 
-  <ul class="benefit__featured_list">
-    {{ benefitLi("$500 per week") }}
-    {{ benefitLi("Up to 16 weeks", "if you keep  meeting the eligibility criteria") }}
-    {{ benefitLi("First payment within 10 days of applying") }}
-  </ul>
-
-  <div class="benefit__body">
-    <strong>Next steps:</strong>
-    <ul>
-      <li>You’ll be asked some questions to direct you to apply through either the Canada Revenue Agency (CRA) or Service Canada.</li>
-      <li>The application will ask you to declare that you meet the eligibility criteria, so read the details carefully. </li>
-      <li>You’ll need to pay income tax on these payments in the future.</li>
+  <div class="benefit__main">
+    <ul class="benefit__featured_list">
+      {{ benefitLi("$500 per week") }}
+      {{ benefitLi("Up to 16 weeks", "if you keep  meeting the eligibility criteria") }}
+      {{ benefitLi("First payment within 10 days of applying") }}
     </ul>
-  </div>
 
-  {{ infoLink(
-        "ei_regular_cerb",
-        "https://www.canada.ca/en/services/benefits/ei/cerb-application.html",
-        "Find out where to apply"
-    )}}
+    <div class="benefit__body">
+      <strong>Next steps:</strong>
+      <ul>
+        <li>You’ll be asked some questions to direct you to apply through either the Canada Revenue Agency (CRA) or Service Canada.</li>
+        <li>The application will ask you to declare that you meet the eligibility criteria, so read the details carefully. </li>
+        <li>You’ll need to pay income tax on these payments in the future.</li>
+      </ul>
+    </div>
+
+    {{ infoLink(
+          "ei_regular_cerb",
+          "https://www.canada.ca/en/services/benefits/ei/cerb-application.html",
+          "Find out where to apply"
+      )}}
+  </div>
 </div>
