--- a/views/benefits/ei_workshare-fr.njk
+++ b/views/benefits/ei_workshare-fr.njk
@@ -4,28 +4,30 @@
     {{__("ei_workshare.header")}}
   </h2>
 
-  <ul class="benefit__featured_list">
-    {{ benefitLi("Recevoir des prestations d’assurance-emploi") }}
-    {{ benefitLi("Pendant 76 semaines maximum") }}
-  </ul>
-
-  <div class="benefit__body">
-    <strong>Cette prestation peut vous aider si :</strong>
-    <ul>
-      <li>vos heures de travail ont été réduites de 10 à 60 % en raison de la COVID-19.</li>
+  <div class="benefit__main">
+    <ul class="benefit__featured_list">
+      {{ benefitLi("Recevoir des prestations d’assurance-emploi") }}
+      {{ benefitLi("Pendant 76 semaines maximum") }}
     </ul>
 
-    <strong>Pour ce faire :</strong>
-    <ul>
-      <li>Vous devrez conclure une entente avec votre employeur et les autres employés effectuant les mêmes tâches que vous.</li>
-      <li>Tous les employés qui effectuent les mêmes tâches que vous doivent accepter de partager la charge de travail équitablement, et votre employeur doit aussi accepter.</li>
-    </ul>
+    <div class="benefit__body">
+      <strong>Cette prestation peut vous aider si :</strong>
+      <ul>
+        <li>vos heures de travail ont été réduites de 10 à 60 % en raison de la COVID-19.</li>
+      </ul>
 
+      <strong>Pour ce faire :</strong>
+      <ul>
+        <li>Vous devrez conclure une entente avec votre employeur et les autres employés effectuant les mêmes tâches que vous.</li>
+        <li>Tous les employés qui effectuent les mêmes tâches que vous doivent accepter de partager la charge de travail équitablement, et votre employeur doit aussi accepter.</li>
+      </ul>
+
+    </div>
+
+    {{ infoLink(
+          "ei_workshare",
+          "https://www.canada.ca/fr/emploi-developpement-social/ministere/avis/coronavirus.html#h4.02",
+          "En savoir plus à propos du programme Travail partagé de l’assurance-emploi"
+      )}}
   </div>
-
-  {{ infoLink(
-        "ei_workshare",
-        "https://www.canada.ca/fr/emploi-developpement-social/ministere/avis/coronavirus.html#h4.02",
-        "En savoir plus à propos du programme Travail partagé de l’assurance-emploi"
-    )}}
 </div>
