--- a/views/benefits/rent_help-en.njk
+++ b/views/benefits/rent_help-en.njk
@@ -4,18 +4,18 @@
     {{__("rent_help.header")}}
   </h2>
 
-  <div class="benefit__body">
+  <div class="benefit__main">
+    <div class="benefit__body">
+      <ul>
+        <li>Provincial governments are in charge of rental housing rules.</li>
+        <li> In most provinces and territories, you cannot be evicted for not paying rent.</li>
+      </ul>
+    </div>
 
-    <ul>
-      <li>Provincial governments are in charge of rental housing rules.</li>
-      <li> In most provinces and territories, you cannot be evicted for not paying rent.</li>
-    </ul>
-
+    {{ infoLink(
+          "rent_help",
+          "https://www.cmhc-schl.gc.ca/en/rental-housing/covid-19-eviction-bans-and-suspensions-to-support-renters",
+          "Check with your provincial government for more details"
+      )}}
   </div>
-
-  {{ infoLink(
-        "rent_help",
-        "https://www.cmhc-schl.gc.ca/en/rental-housing/covid-19-eviction-bans-and-suspensions-to-support-renters",
-        "Check with your provincial government for more details"
-    )}}
 </div>
