--- a/views/benefits/rrif-en.njk
+++ b/views/benefits/rrif-en.njk
@@ -4,17 +4,17 @@
     {{__("rrif.header")}}
   </h2>
 
-  <div class="benefit__body">
+  <div class="benefit__main">
+    <div class="benefit__body">
+      <ul>
+        <li>The mandatory amount you need to withdraw from your RRIF in 2020 will be 25% lower so you can save more money.</li>
+      </ul>
+    </div>
 
-    <ul>
-      <li>The mandatory amount you need to withdraw from your RRIF in 2020 will be 25% lower so you can save more money.</li>
-    </ul>
-
+    {{ infoLink(
+          "rrif",
+          "https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/registered-retirement-income-fund-rrif.html",
+          "Contact your bank for more details"
+      )}}
   </div>
-
-  {{ infoLink(
-        "rrif",
-        "https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/registered-retirement-income-fund-rrif.html",
-        "Contact your bank for more details"
-    )}}
 </div>
