--- a/views/benefits/rrif-fr.njk
+++ b/views/benefits/rrif-fr.njk
@@ -4,18 +4,20 @@
     {{__("rrif.header")}}
   </h2>
 
-  <div class="benefit__body">
-    <ul>
-      <li>
-        Le montant obligatoire que vous devrez retirer de votre fond enregistré de revenu de retraire
-        en 2020 sera 25% plus bas afin que vous puissiez économiser.
-      </li>
-    </ul>
-  </div>
+  <div class="benefit__main">
+    <div class="benefit__body">
+      <ul>
+        <li>
+          Le montant obligatoire que vous devrez retirer de votre fond enregistré de revenu de retraire
+          en 2020 sera 25% plus bas afin que vous puissiez économiser.
+        </li>
+      </ul>
+    </div>
 
-  {{ infoLink(
-        "rrif",
-        "https://www.canada.ca/fr/agence-revenu/services/impot/particuliers/sujets/fonds-enregistre-revenu-retraite-ferr.html",
-        "Contactez votre banque pour plus de détails"
-    )}}
+    {{ infoLink(
+          "rrif",
+          "https://www.canada.ca/fr/agence-revenu/services/impot/particuliers/sujets/fonds-enregistre-revenu-retraite-ferr.html",
+          "Contactez votre banque pour plus de détails"
+      )}}
+  </div>
 </div>
