--- a/views/benefits/student_financial_aid-en.njk
+++ b/views/benefits/student_financial_aid-en.njk
@@ -4,30 +4,32 @@
     {{__("student_financial_aid.header")}}
   </h2>
 
-  <strong>Increasing Canada Student Grants and Loans</strong>
+  <div class="benefit__main">
+    <strong>Increasing Canada Student Grants and Loans</strong>
 
-  <ul class="benefit__featured_list">
-    {{ benefitLi("Up to $6,000 in grants for full-time students") }}
-    {{ benefitLi("Up to $3,600 in grants for part-time students") }}
-    {{ benefitLi("Doubling grants for students with dependants") }}
-    {{ benefitLi("Doubling grants for students with permanent disabilities") }}
-    {{ benefitLi("Removing expected contributions from students and spouses") }}
-    {{ benefitLi("Up to $350 for the weekly amount in student loans") }}
-  </ul>
-
-  <div class="benefit__body">
-    <strong>Good to know:</strong>
-    <ul>
-      <li>This financial aid starts August 1, 2020.</li>
-      <li>It’s available for 1 year.</li>
-      <li>You can apply <a href="https://www.canada.ca/en/services/benefits/education/student-aid/grants-loans/province-apply.html" target="_blank">in your province or territory of residence</a>.</li>
+    <ul class="benefit__featured_list">
+      {{ benefitLi("Up to $6,000 in grants for full-time students") }}
+      {{ benefitLi("Up to $3,600 in grants for part-time students") }}
+      {{ benefitLi("Doubling grants for students with dependants") }}
+      {{ benefitLi("Doubling grants for students with permanent disabilities") }}
+      {{ benefitLi("Removing expected contributions from students and spouses") }}
+      {{ benefitLi("Up to $350 for the weekly amount in student loans") }}
     </ul>
 
-  </div>
+    <div class="benefit__body">
+      <strong>Good to know:</strong>
+      <ul>
+        <li>This financial aid starts August 1, 2020.</li>
+        <li>It’s available for 1 year.</li>
+        <li>You can apply <a href="https://www.canada.ca/en/services/benefits/education/student-aid/grants-loans/province-apply.html" target="_blank">in your province or territory of residence</a>.</li>
+      </ul>
 
-  {{ infoLink(
-        "student_financial_aid",
-        "https://www.canada.ca/en/services/benefits/education/student-aid/notice-covid-19.html",
-        "Read more about financial aid for students"
-    )}}
+    </div>
+
+    {{ infoLink(
+          "student_financial_aid",
+          "https://www.canada.ca/en/services/benefits/education/student-aid/notice-covid-19.html",
+          "Read more about financial aid for students"
+      )}}
+  </div>
 </div>
